some validation changes. some PUT operations implemented. changed login return data from "user" to "result"
