# Oiika-Api-Server/api/models/Tutors.js
@@ -1,4 +1,5 @@
 var mongoose = require('mongoose');
+var utils = require('mongoose-utils');
 
 module.exports = function() {
 
@@ -8,19 +9,24 @@ module.exports = function() {
 
   var Tutors = new mongoose.Schema({
     // first_name : { type: String, required:true, index: true, lowercase: true, trim:true, unique: true, validate: [util.validate.email, 'not valid'] },
+    // REQUIRED
     account_id : { type: ObjectId, index: true, required: false },
     first_name : { type: String, required: true, trim: true },
     last_name : { type: String, required: true, trim: true },
     email : { type: String, index: true, unique: true, required: true, lowercase: true, trim: true },
     account_type : { type: String, enum: enumAccountType, required: true },
-    short_description: { type: String, required: false},
-    full_description: { type: String, required: false},
-    city: { type: String, required: false, trim: false},
+
+    // NOT REQUIRED
+    short_description: { type: String, required: false, trim: true},
+    full_description: { type: String, required: false, trime: true},
     hourly_rate: { type: Number, required: false},
-    // latitude of location
-    location_lat: { type: Number, required: false},
-    // longitude of location
-    location_lng: { type: Number, required: false},
+    currentLocation: {
+      city: { type: String, required: false, trim: false},
+      // latitude of location
+      lat: { type: Number, required: false, validate: [utils.validate.latlong, 'not a valid latitude']},
+      // longitude of location
+      lng: { type: Number, required: false, validate: [utils.validate.latlong, 'not a valid longitude']},
+    },
     // distance tutor is willing to travel
     // Note: Calculated based on just an integer value for lat and long. Algorithm to calculate KM distance should be created later.
     travel_distance: { type: Number, required: false},
